log warning if config invalid
Signed-off-by: Jan N. Klug <jan.n.klug@rub.de>